#---------------------------------- 0.31.1 -----------------------------------
[fixed] periodic tasks should now work. Sorry about that :/
#---------------------------------- 0.31.0 -----------------------------------
[fixed] issues with cron tasks and periodic tasks, releasing 0.31.0 because
    0.30.* is apparently cursed
#---------------------------------- 0.30.6 -----------------------------------
[fixed] issue with redis-py <2.* connections
#---------------------------------- 0.30.5 -----------------------------------
[fixed] strange AttributeError on the threading.local object
#---------------------------------- 0.30.4 -----------------------------------
[fixed] bugs related to executing inline tasks
#---------------------------------- 0.30.3 -----------------------------------
[fixed] one line change because Josiah wasn't paying attention
#---------------------------------- 0.30.2 -----------------------------------
[fixed] removed izip, fixed some utility functions, added no arguments test to
    test / verify basic issue. Thanks to github user https://github.com/makov44
    for the original bug report and PR.
[changed] can now set the default queue name for the whole rpqueue as an
    attribute called `rpqueue.DEFAULT_QUEUE` - kind of undocumented for now
#---------------------------------- 0.30.1 -----------------------------------
[fixed] docs website and link
#---------------------------------- 0.30.0 -----------------------------------
[changed] Makefile pypi upload switched to using twine
[added] data queues separate from task queues, see help(rpqueue.Data) for help
[changed] docs will now live at Github on Github pages (and will automatically
    update)
[added] visibility timeout to tasks (tasks can auto-retry, and self-spew into a
    shared deadletter queue)
[added] docs and examples of using data queues, deadletter queues, and
    visibility timeouts
[changed] docs are now alphabetically sorted