@@ -1,4 +1,0 @@
-# Sphinx build info version 1
-# This file hashes the configuration used when building these files. When it is not found, a full rebuild will be done.
-config: 6ab637b79284c4cd529ce118a1ed5d88
-tags: 645f666f9bcd5a90fca523b33c5a78b7
